--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Checkout Repo
         uses: actions/checkout@v3
       - name: Install Node
-        uses: actions/setup-node@4
+        uses: actions/setup-node@v4
         with:
           node-version: '20'
       - name: Npm Install
