--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -20,14 +20,14 @@ jobs:
         run: npx cypress run
       - name: Upload screenshot artifacts
         uses: actions/upload-artifact@v4
-        # add the line below to store screenshots only on failures
-        # if: failure()
+        if: always()
         with:
           name: cypress-screenshots
           path: cypress/screenshots
           if-no-files-found: ignore # 'warn' or 'error' are also available, defaults to `warn`
       - name: Upload video artifacts
         uses: actions/upload-artifact@v4
+        if: always()
         with:
           name: cypress-videos
           path: cypress/videos
